# word-forge

./: .gitignore
backend/: .env.example  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json
backend/app/: config.py
backend/app/db/: db.py
backend/app/migrations/: schema.sql
backend/app/models/: user_model.py
backend/app/repositories/: user_repo.py
backend/app/routes/: user_routes.py
backend/app/schema/: user_schema.py
bot/: .env.example  README.md  main.py  pyproject.toml
bot/.claude/: settings.local.json
frontend/: CLAUDE.md  TELEGRAM_SETUP.md  biome.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/components/layout/: Layout.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Modal.tsx  ProgressBar.tsx
frontend/src/constants/: sampleData.ts
frontend/src/hooks/: useTelegram.ts
frontend/src/lib/: i18n.ts
frontend/src/pages/: CustomWordsPage.tsx  HistoryPage.tsx  HomePage.tsx  LearnVerbsPage.tsx  LearnWordsPage.tsx  MistakesPage.tsx  ProfilePage.tsx  StatsPage.tsx
frontend/src/routes/: __root.tsx  custom-words.tsx  history.tsx  index.tsx  learn.verbs.tsx  learn.words.tsx  mistakes.tsx  profile.tsx  stats.tsx
frontend/src/stores/: customWordsStore.ts  gamificationStore.ts  mistakesStore.ts  sessionsStore.ts  userStore.ts
frontend/src/types/: index.ts
